; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_input.c_tcp_sbrcv_tstmp_check.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_input.c_tcp_sbrcv_tstmp_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcpcb = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.socket* }
%struct.socket = type { %struct.sockbuf }
%struct.sockbuf = type { i32 }

@tcp_recvspace = common dso_local global i32 0, align 4
@TF_REQ_TSTMP = common dso_local global i32 0, align 4
@TF_RCVD_TSTMP = common dso_local global i32 0, align 4
@SB_AUTOSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcpcb*)* @tcp_sbrcv_tstmp_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcp_sbrcv_tstmp_check(%struct.tcpcb* %0) #0 {
  %2 = alloca %struct.tcpcb*, align 8
  %3 = alloca %struct.socket*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockbuf*, align 8
  store %struct.tcpcb* %0, %struct.tcpcb** %2, align 8
  %6 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %7 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.socket*, %struct.socket** %9, align 8
  store %struct.socket* %10, %struct.socket** %3, align 8
  %11 = load i32, i32* @tcp_recvspace, align 4
  %12 = mul nsw i32 2, %11
  store i32 %12, i32* %4, align 4
  %13 = load %struct.socket*, %struct.socket** %3, align 8
  %14 = getelementptr inbounds %struct.socket, %struct.socket* %13, i32 0, i32 0
  store %struct.sockbuf* %14, %struct.sockbuf** %5, align 8
  %15 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %16 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @TF_REQ_TSTMP, align 4
  %19 = load i32, i32* @TF_RCVD_TSTMP, align 4
  %20 = or i32 %18, %19
  %21 = and i32 %17, %20
  %22 = load i32, i32* @TF_REQ_TSTMP, align 4
  %23 = load i32, i32* @TF_RCVD_TSTMP, align 4
  %24 = or i32 %22, %23
  %25 = icmp ne i32 %21, %24
  br i1 %25, label %26, label %39

26:                                               ; preds = %1
  %27 = load %struct.sockbuf*, %struct.sockbuf** %5, align 8
  %28 = getelementptr inbounds %struct.sockbuf, %struct.sockbuf* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @SB_AUTOSIZE, align 4
  %31 = and i32 %29, %30
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %26
  %34 = load %struct.tcpcb*, %struct.tcpcb** %2, align 8
  %35 = load %struct.sockbuf*, %struct.sockbuf** %5, align 8
  %36 = load i32, i32* %4, align 4
  %37 = load i32, i32* %4, align 4
  %38 = call i32 @tcp_sbrcv_reserve(%struct.tcpcb* %34, %struct.sockbuf* %35, i32 %36, i32 0, i32 %37)
  br label %39

39:                                               ; preds = %33, %26, %1
  ret void
}

declare dso_local i32 @tcp_sbrcv_reserve(%struct.tcpcb*, %struct.sockbuf*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
